# tis-v2-cli

./: .gitignore  README.md  impute  pyproject.toml  tis
local/: ansi_colors.py  api.py  env.py  request_schema.py  response_schema.py  util.py
local/api/: __init__.py  base.py  helpers.py
local/commands/: __init__.py  admin.py  base.py  job.py  query.py  server.py  version.py
local/server/: __init__.py  base.py  default.py  display.py  helpers.py  lookup.py  register.py
script/: decode_jwt.py  explore_jwt.py  impute.py  load_test.py  test_endpoints.py  tis.py
